# mywm

./: README.md  main.py  pyproject.toml  setup.cfg
config/: config-completa.toml  config.toml
core/: commands.py  events.py  keybindings.py  state.py  wm.py
layouts/: floating.py  fullscreen.py  monocle.py  tiling.py
managers/: monitor.py  window.py  workspace.py
mywm1.0/: Tutorial.txt  main.py
mywm1.0/config/: config.py
mywm1.0/core/: config_loader.py  ewmh.py  layouts.py
mywm1.0/managers/: decorations.py  floating.py  keybindings.py  multimonitor.py  notificações.py  scratchpad.py  statusbar.py  window.py  workspaces.py
utils/: autostart.py  config.py  launcher.py  lemonbar.py
