[metadata]
name = mywm
version = 1.0.0
author = Seu Nome
author_email = seuemail@example.com
description = A lightweight and extensible tiling window manager
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
platforms = any

[options]
packages = find:
python_requires = >=3.8
install_requires =
    xcffib>=0.12.1
    cairocffi>=1.6.1
    pygobject>=3.42.0
